--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development ./src/index.js --output ./static/frontend/main.js",
+    "dev-watch": "webpack --mode development ./src/index.js --output ./static/frontend/main.js --watch",
     "build": "webpack --mode production ./src/index.js --output ./static/frontend/main.js"
   },
   "keywords": [],
