--- a/freedb_site/uwsgi.ini
+++ b/freedb_site/uwsgi.ini
@@ -5,4 +5,4 @@ wsgi-file = freedb_site/wsgi.py
 processes = 4
 threads = 2
 stats = 127.0.0.1:9191
-static-map = /static=./staticfiles
+static-map = /static=/app/freedb_site/staticfiles
