--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 #      MONGO_INITDB_ROOT_PASSWORD: example
 
   web:
-    image: freedb
+    image: kevenli/freedb
     ports:
       - "8000:8000"
     depends_on:
