--- a/freedb_site/uwsgi.ini
+++ b/freedb_site/uwsgi.ini
@@ -1,6 +1,9 @@
 [uwsgi]
 http-socket = :8000
 #chdir = ../
+shared-socket = 0.0.0.0:8443
+https = =0,examples/ssl/localhost.crt,examples/ssl/localhost.key,HIGH
+http-to = /tmp/uwsgi.sock
 wsgi-file = freedb_site/wsgi.py
 processes = 4
 threads = 2
