--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,11 +2,11 @@ version: '3.1'
 services:
   web:
     image: kevenli/freedb:develop
-    # volumes:
-    #   - ./db.sqlite3:/app/db.sqlite3:Z
+    volumes:
+      - ./db.sqlite3:/app/db.sqlite3:Z
     ports:
-      - 8000:8000
-    command: python manage.py runserver 0.0.0.0:8000
+      - 8000:81
+    # command: python manage.py runserver 0.0.0.0:8000
 
   mongo:
     image: mongo
