--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,13 +6,16 @@ services:
       - ./db.sqlite3:/app/db.sqlite3:Z
     ports:
       - 8000:81
-    # command: python manage.py runserver 0.0.0.0:8000
+    depends_on:
+      - mongo
+    links:
+      - "mongo:mongo"
+    environment:
+      MONGODB_URL: mongo
 
   mongo:
     image: mongo
     restart: always
-    ports:
-      - 27017:27017
     volumes:
       - "mongo:/data/db"
 
