--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+services: 
+  - mongodb
 # command to run tests
 script:
   - python manage.py migrate && python manage.py test
