--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,12 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+  - pip install coverage
 services: 
   - mongodb
 # command to run tests
 script:
-  - python manage.py migrate && python manage.py test
+  - coverage run manage.py migrate && python manage.py test
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
