--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ services:
   - mongodb
 # command to run tests
 script:
-  - coverage run manage.py migrate && python manage.py test
+  - coverage run manage.py test
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
